--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -9,7 +9,7 @@
 <script src="js/Readability.js"></script>
 <script src="js/JSDOMParser.js"></script>
 <script src="js/vue.min.js"></script>
-<script src="http://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="js/axios.min.js"></script>
 <body>
 	<div id="app">
 		<div>
