html escape 해제하는 설정 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
-<body>
-{{msg}}
+<body>{{#url}} <a href='/post?url={{{.}}}'>a tag</a> {{/url}}
 </body>
 </html>
