--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -5,11 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Document</title>
-</head>
 <script src="js/Readability.js"></script>
 <script src="js/JSDOMParser.js"></script>
 <script src="js/vue.min.js"></script>
 <script src="js/axios.min.js"></script>
+<style type="text/css">
+img {
+	max-width: 100%;
+	height: auto;
+}
+</style>
+</head>
 <body>
 	<div id="app">
 		<div>
