--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 {{#url}} 
-	<a href='/post?url={{{.}}}'>a tag</a> 
+	<a href='/post?url={{{.}}}'>기사보기</a> 
 {{/url}}
 <div id="app">
 	<input v-model="url"/>
